# piquano-core

./: .gitignore  BRANCHING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: backup.sh.template  ci.yml.template  deploy.sh.template  nginx.conf.template  systemd.service.template
piquano_core/: __init__.py  ai.py  impersonation.py  utils.py
piquano_core/admin_center/: admin.py  api_urls.py  api_views.py  app_client.py  apps.py  context_processors.py  decorators.py  defaults.py  middleware.py  models.py  permissions.py  registry.py  urls.py  views.py
piquano_core/admin_center/management/commands/: sync_permissions.py
piquano_core/admin_center/migrations/: 0001_initial.py  0002_teampermission.py
piquano_core/admin_center/templates/piquano_admin_center/: _nav.html  catalog_list.html  dashboard.html  email_log.html  email_log_detail.html  permission_overview.html  system_status.html  team_permission_overview.html  team_permissions.html  toggle_list.html  (+1 more)
piquano_core/admin_center/templatetags/: piquano_perms.py  pq_topbar.py
piquano_core/ats_client/: __init__.py  client.py
piquano_core/audit/: __init__.py  apps.py  models.py
piquano_core/crm_client/: __init__.py  client.py
piquano_core/email/: __init__.py  mailjet.py
piquano_core/help_chat/: urls.py  views.py
piquano_core/ms365/: adapter.py  admin.py  apps.py  bridge.py  crypto.py  graph.py  models.py  oauth.py  send.py  sync.py  urls.py  utils.py  views.py
piquano_core/ms365/migrations/: 0001_initial.py
piquano_core/privacy/: urls.py  views.py
piquano_core/shared/: apps.py  models.py  router.py  signals.py  timeline.py
piquano_core/shared/migrations/: 0001_initial.py  0002_add_related_name_to_shared_activity.py  0003_add_catalog_vertical_subfunktion.py  0004_add_catalog_assignment.py  0005_alter_sharedactivity_activity_type.py  0006_email_log.py
piquano_core/sso/: __init__.py  crm_enriched.py  middleware.py
piquano_core/templates/piquano_core/: app_switcher.html  datenschutz_content.html  help_chat.html  kandidat_detail_body.html  privacy_banner.html  tasks_block.html  tasks_list.html  topbar.html  unified_timeline.html
(+16 files in other folders)
