[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piquano-core"
version = "0.1.0"
description = "Shared building blocks for PIQUANO Django apps (auth, CRM client, mail, audit)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PIQUANO", email = "noreply@piquano.com" }]
license = { text = "Proprietary" }
dependencies = [
    "Django>=4.2,<6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-django>=4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["piquano_core*"]

[tool.setuptools.package-data]
piquano_core = ["static/piquano_core/css/*.css"]
