[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piquano-core"
version = "0.6.0"
description = "Shared building blocks for PIQUANO Django apps (auth, CRM client, mail, audit)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PIQUANO", email = "noreply@piquano.com" }]
license = { text = "Proprietary" }
dependencies = [
    "Django>=4.2,<7.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-django>=4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["piquano_core*"]

[tool.setuptools.package-data]
piquano_core = ["static/piquano_core/css/*.css"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # function call in default arg — Django pattern
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports

[tool.ruff.format]
quote-style = "double"
